--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -44,9 +44,5 @@
   <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
   <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
 </div>
-  <div class="container">
-    <div class="row">
-      <div class="span12"><%= yield %></div>
-    </div>
-  </div></body>
+<%= yield %></body>
 </html>
