--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,15 @@
-<h1>Listing posts</h1>
+  <div class="container">
+    <div class="row">
+      <div class="span4 text-center"><%=image_tag('rails.png', class: 'img-circle')%>
+</div>
+      <div class="span4 text-center"><%=image_tag('rails.png', class: 'img-circle')%>
+</div>
+      <div class="span4 text-center"><%=image_tag('rails.png', class: 'img-circle')%>
+</div>
+</div>
+</div>
+
+<!-- <h1>Listing posts</h1>
 
 <table>
   <tr>
@@ -25,3 +36,4 @@
 <br />
 
 <%= link_to 'New Post', new_post_path %>
+ -->
